apps/base/vd/vd-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vd-api
  labels: { app: vd-api }
spec:
  replicas: 1
  selector:
    matchLabels: { app: vd-api }
  template:
    metadata:
      labels: { app: vd-api }
    spec:
      containers:
        - name: api
          image: ghcr.io/verus-datum/api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet: { path: /api/health, port: 5171 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /api/health, port: 5171 }
            initialDelaySeconds: 10
            periodSeconds: 20
