apps/base/vd/vd-gui.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vd-gui
  labels: { app: vd-gui }
spec:
  replicas: 1
  selector:
    matchLabels: { app: vd-gui }
  template:
    metadata:
      labels: { app: vd-gui }
    spec:
      containers:
        - name: gui
          image: ghcr.io/verus-datum/gui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet: { path: /, port: 3000 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /, port: 3000 }
            initialDelaySeconds: 10
            periodSeconds: 20
