apps/base/vd/vd-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vd-api
  labels: { app: vd-api }
spec:
  selector: { app: vd-api }
  ports:
    - name: http
      port: 80
      targetPort: 8081
