apps/base/vd/vd-db.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vd-db
spec:
  selector: { app: vd-db }
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
