apps/base/vd/vd-gui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vd-gui
  labels: { app: vd-gui }
spec:
  selector: { app: vd-gui }
  ports:
    - name: http
      port: 80
      targetPort: 3000
